Unify worker eligibility query contracts
Replace TaskItemWorkerSelector and quantity-bearing matching queries with a shared immutable EligibilityQuery and separate RefillTarget. Use flat string-list queries across HTTP, storage, scenarios, frontend, and Pacer flows, with Rule-owned normalization. Harden candidate consumption to commit only current live entries without pool-wide optimistic retries, and document the incompatible nested-condition cutover.