@@ -3,7 +3,7 @@ package com.xa.mass.workermatching;
 import com.xa.mass.kernel.assignment.WorkerCandidateIndex.HeldCandidate;
 import com.xa.mass.kernel.assignment.WorkerCandidateIndex.TaskQuery;
 import com.xa.mass.kernel.redis.RedisKeyspace;
-import com.xa.mass.kernel.task.TaskItemWorkerSelector;
+import com.xa.mass.kernel.assignment.EligibilityQuery;
 import com.xa.mass.workermatching.rules.*;
 import io.lettuce.core.KeyValue;
 import io.lettuce.core.RedisClient;
@@ -28,7 +28,7 @@ class RefillBatchTest {
     final JsonMapper json=JsonMapper.builder().build();
     RedisWorkerMatchingCatalog catalog;
     RedisRuleStorage storage;
-    static final TaskItemWorkerSelector ANY=TaskItemWorkerSelector.parse(Map.of());
+    static final EligibilityQuery ANY=EligibilityQuery.parse(Map.of());
 
     @BeforeEach void setUp() {
         when(client.connect(StringCodec.UTF8)).thenReturn(connection);
@@ -47,11 +47,11 @@ class RefillBatchTest {
     }
     @AfterEach void close() { catalog.close(); }
 
-    void bind(String task,String group,List<EligibilityQuery> targets) {
+    void bind(String task,String group,List<RefillTarget> targets) {
         bindings.put(task,json.writeValueAsString(Map.of("workerGroupId",group,"ruleId","test.pool","refillTargets",targets)));
     }
-    static EligibilityQuery pool(int count,String... values) {
-        return new EligibilityQuery(Map.of("pool",List.of(values)),count);
+    static RefillTarget pool(int count,String... values) {
+        return new RefillTarget(Map.of("pool",List.of(values)),count);
     }
     static List<HeldCandidate> offer(String... ids) {
         return Arrays.stream(ids).map(id->new HeldCandidate(id,20,2000)).toList();
@@ -67,7 +67,7 @@ class RefillBatchTest {
         var batch=catalog.prepareRefill(tasks);
         assertEquals(Set.of("g1","g2"),batch.groupsNeedingRefill());
         assertEquals(2,rule.observedTargets.size());
-        assertTrue(rule.observedTargets.contains(pool(2,"US")),"duplicate targets must merge using MAX");
+        assertTrue(rule.observedTargets.contains(pool(2,"US").query()),"duplicate targets must merge using MAX");
         int preparedNormalizations=rule.normalizations;
         clearInvocations(redis);
         tasks.clear(); // No later Group may reconstruct its inputs from the caller's Map.
@@ -106,7 +106,7 @@ class RefillBatchTest {
     }
 
     @Test void onlyVisitedTargetPagesReachRulesAndNextRoundAdvances() {
-        var first=new ArrayList<EligibilityQuery>();var second=new ArrayList<EligibilityQuery>();
+        var first=new ArrayList<RefillTarget>();var second=new ArrayList<RefillTarget>();
         for(int i=0;i<200;i++)(i<100?first:second).add(pool(1,String.format("p%03d",i)));
         bind("a","g1",first);bind("b","g1",second);
         var tasks=catalog.prepareTaskQueries(Map.of("a","g1","b","g1"));
@@ -168,14 +168,14 @@ class RefillBatchTest {
 
     @Test void catalogWorksWithAnIndependentMapRuleWithoutRedisOrProjectionProtocols() {
         RuleHandler mapRule=new MapRule();
-        var target=new EligibilityQuery(Map.of(),2);
+        var target=new RefillTarget(Map.of(),2);
         bindings.put("map",json.writeValueAsString(Map.of("workerGroupId","g1","ruleId","map",
                 "refillTargets",List.of(target))));
         try(var other=new RedisWorkerMatchingCatalog(storage,
                 Map.of("worker.default",new DefaultRuleHandler(storage,Map.of()),"map",mapRule),
                 Map.of("g1",Set.of("map")),Map.of())) {
             var tasks=other.prepareTaskQueries(Map.of("map","g1"));
-            tasks.get("map").validate(ANY); clearInvocations(redis);
+            tasks.get("map").normalize(ANY); clearInvocations(redis);
             assertEquals(Set.of("g1"),other.prepareRefill(tasks).groupsNeedingRefill());
             var held=offer("first","second");
             assertEquals(2,other.prepareRefill(tasks).refill("g1",held));
@@ -186,22 +186,21 @@ class RefillBatchTest {
     /** Deliberately independent representation: no local-candidate base, index or storage resource. */
     static final class MapRule implements RuleHandler {
         final Map<String,LinkedHashMap<String,HeldCandidate>> groups=new HashMap<>();
-        public EligibilityQuery normalizeTarget(String group,EligibilityQuery target) {
-            if(group==null || group.isBlank() || !target.query().isEmpty())throw new IllegalArgumentException();
-            return target;
+        public EligibilityQuery normalizeQuery(String group,EligibilityQuery query) {
+            if(group==null || group.isBlank() || !query.query().isEmpty())throw new IllegalArgumentException();
+            return query;
         }
-        public void validateSelector(String group,TaskItemWorkerSelector selector) {
-            normalizeTarget(group,new EligibilityQuery(Map.of(),1));
-            if(!selector.isAny())throw new IllegalArgumentException();
-        }
-        public synchronized Map<EligibilityQuery,Integer> deficits(String group,List<EligibilityQuery> targets) {
+        public synchronized Map<EligibilityQuery,Integer> deficits(String group,Map<EligibilityQuery,Integer> targets) {
             if(targets.size()>100)throw new IllegalArgumentException();
-            targets.forEach(q->normalizeTarget(group,q));
             var result=new LinkedHashMap<EligibilityQuery,Integer>();
-            targets.forEach(q->result.put(q,Math.max(0,q.count()-groups.getOrDefault(group,new LinkedHashMap<>()).size())));
-            return Map.copyOf(result);
+            targets.forEach((q,count)->{
+                normalizeQuery(group,q);
+                if(count==null || count<1 || count>1000)throw new IllegalArgumentException();
+                result.put(q,Math.max(0,count-groups.getOrDefault(group,new LinkedHashMap<>()).size()));
+            });
+            return Collections.unmodifiableMap(result);
         }
-        public synchronized List<String> refill(String group,List<EligibilityQuery> targets,List<HeldCandidate> offered,int maxAccepted) {
+        public synchronized List<String> refill(String group,Map<EligibilityQuery,Integer> targets,List<HeldCandidate> offered,int maxAccepted) {
             var missing=deficits(group,targets);
             if(offered.size()>100 || maxAccepted<0 || maxAccepted>100 || offered.stream().map(HeldCandidate::workerId).distinct().count()!=offered.size())
                 throw new IllegalArgumentException();
@@ -210,11 +209,11 @@ class RefillBatchTest {
             for(var candidate:offered)if(accepted.size()<limit && pool.putIfAbsent(candidate.workerId(),candidate)==null)accepted.add(candidate.workerId());
             return List.copyOf(accepted);
         }
-        public synchronized Map<TaskItemWorkerSelector,List<HeldCandidate>> take(String group,Map<TaskItemWorkerSelector,Integer> limits) {
+        public synchronized Map<EligibilityQuery,List<HeldCandidate>> take(String group,Map<EligibilityQuery,Integer> limits) {
             if(limits.size()>100 || limits.values().stream().anyMatch(n->n<1 || n>100) || limits.values().stream().mapToInt(Integer::intValue).sum()>100)
                 throw new IllegalArgumentException();
-            limits.keySet().forEach(selector->validateSelector(group,selector));
-            var result=new LinkedHashMap<TaskItemWorkerSelector,List<HeldCandidate>>();
+            limits.keySet().forEach(selector->normalizeQuery(group,selector));
+            var result=new LinkedHashMap<EligibilityQuery,List<HeldCandidate>>();
             var pool=groups.getOrDefault(group,new LinkedHashMap<>());
             limits.forEach((selector,count)->{
                 var taken=new ArrayList<HeldCandidate>();var iterator=pool.values().iterator();
@@ -232,13 +231,14 @@ class RefillBatchTest {
         final List<List<String>> snapshots=new ArrayList<>();
         int normalizations;
         Runnable beforeSnapshot=()->{};
-        @Override protected EligibilityQuery normalize(String group,Map<String,?> expression,int count,boolean selector) {
+        @Override protected EligibilityQuery normalize(String group,EligibilityQuery input) {
+            var expression = input.query();
             normalizations++;
             if(!Set.of("pool").containsAll(expression.keySet()))throw new IllegalArgumentException("unsupported pool query");
             var result=new LinkedHashMap<String,List<String>>();
             expression.forEach((key,value)->result.put(key,((List<?>)value).stream()
                     .map(String.class::cast).distinct().sorted().toList()));
-            return new EligibilityQuery(result,count);
+            return new EligibilityQuery(result);
         }
         @Override protected java.util.function.BiPredicate<String,String> predicate(String group,EligibilityQuery query) {
             observedTargets.add(query);
